--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "mongoose": "^5.11.18",
     "node-binance-api": "^0.12.4"
   },
