add dotenv config

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "mongoose": "^5.11.18",
     "node-binance-api": "^0.12.4"
   },
