--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "mongoose": "^5.11.18",
     "node-binance-api": "^0.12.4"
   },
@@ -18,6 +19,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
+    "morgan": "^1.10.0",
     "prettier": "^2.2.1"
   }
 }
